# Lab-Micro

./: .gitignore  Advanced Details for Component 1 (NAND).md  Breakdown of the material for Week 2.md  Designing a Full Adder Step-by-Step Guide for Beginners.md  Digital Logic Design Walkthrough Claude Lab2 Analysis From Truth Tables to LTSpice Simulation.md  Half adder signal routing notes.md  Lab 2 Translation Process.md  Notes on implementation three.md  Notes on implementation.md  README.md  additional half and full digital logic.md  conversation_log.txt  full adder diagram.md  half and full digital logic kmap and truth table.md  lab2 notes for implimentation.md  pyproject.toml  requirements.txt
.cursor/rules/: project-typical.mdc
Design Templates Microarch/: Full Adder Design Template.md
Homework Prompts/: Homework 2 HEX, 2's complement, logic from truth tables and KMaps.md  Homework due Monday for MicroArch Assignment 1.md
docs/: **Adjacency Theorem in Combinational Logic**.md  **Revised Lab 2 Directions**.md  Comprehensive, **ready-to-adapt** template for your Lab Two report.md  Design Template for Building Your Own Adders.md  Further Reading and Resources.md  Half adder routing digram.md  Ini of lab2 instructions.md  Lab 2 Direct Directions.md  Lab 2 Report Requirements Detailed.md  Lab Two Start.md  Netlist Change v1.md  Notes on implementation two.md  next steps for lab 2.md
